test/log/load/vldcb1in0_v_i16_m.txt
vldcb1in0_v_i16_m.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vldcb1in0_v_i16_m.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vldcb1in0_v_i16_m.c:37:6: warning: no previous prototype for 'vldcb1in0_v_i16_m_golden' [-Wmissing-prototypes]
   37 | void vldcb1in0_v_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *base,uint32_t imm,int16_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~~~
vldcb1in0_v_i16_m.c: In function 'vldcb1in0_v_i16_m_golden':
vldcb1in0_v_i16_m.c:41:31: error: subscripted value is neither array nor pointer nor vector
   41 |                  exp_result[i][j*GROUP_DEPTH/ELE_WIDTH+k] = base[i*COMBO_STRIDE/ELE_WIDTH+ j*GROUP_STRIDE/ELE_WIDTH + k*ELE_STRIDE/ELE_WIDTH];
      |                               ^
vldcb1in0_v_i16_m.c:37:41: warning: unused parameter 'mask' [-Wunused-parameter]
   37 | void vldcb1in0_v_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *base,uint32_t imm,int16_t *exp_result) {
      |                               ~~~~~~~~~~^~~~
vldcb1in0_v_i16_m.c:37:55: warning: unused parameter 'maskoff' [-Wunused-parameter]
   37 | void vldcb1in0_v_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *base,uint32_t imm,int16_t *exp_result) {
      |                                              ~~~~~~~~~^~~~~~~
vldcb1in0_v_i16_m.c:37:86: warning: unused parameter 'imm' [-Wunused-parameter]
   37 | void vldcb1in0_v_i16_m_golden(uint64_t *mask,int16_t *maskoff,int16_t *base,uint32_t imm,int16_t *exp_result) {
      |                                                                             ~~~~~~~~~^~~
vldcb1in0_v_i16_m.c: In function 'main':
vldcb1in0_v_i16_m.c:62:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   62 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vldcb1in0_v_i16_m.c:53:14: warning: variable 'imm' set but not used [-Wunused-but-set-variable]
   53 |     uint32_t imm;
      |              ^~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vldcb1in0_v_i16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vldcb1in0_v_i16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vldcb1in0_v_i16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vldcb1in0_v_i16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed